force-app/main/default/objects/custom_create189__c/custom_create189__c.object-meta.xml
<CustomObject>
    <label>Custom created object189</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects189</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>