force-app/main/default/objects/custom_create189__c/fields/custom_create_189field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_189field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 189field522</label>
    <type>Checkbox</type>
</CustomField>